DwonloadImages http connection pool with HttpClient